# wasm_create_letter

./: README.md  index.html  package.json  webpack.common.js
.github/workflows/: github-pages  github-pages.yaml
js/: app.js
rust_lib/: Cargo.toml
rust_lib/src/: lib.rs
