[package]
name = "rust_lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
#pdf-writer = "0.9.0"  # Replace printpdf with pdf-writer
#printpdf = { version = "0.7.0", features = ["js-sys"] }
#printpdf = { git = "https://github.com/hack03er/printpdf", rev = "471a2c2" }
#printpdf = {path = "printpdf"}
pdf-writer = "0.12.1"
wasm-bindgen = "0.2.100"
serde_bytes = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
log = "0.4.6"
wasm-logger = "0.2.0"
